[Add]main-visual

--- a/index.html
+++ b/index.html
@@ -30,11 +30,21 @@
           <li class="menu-list"><a href="Profile">Profile</a></li>
           <li class="menu-list"><a href="Contact">Contact</a></li>
         </ul>
-      </nav>
-      
+      </nav>      
     </div>
   </header>
-
+  <!-- top-visual -->
+  <section class="top-visual">
+    <div class="container"> 
+      <h1 class="visual-title">
+        Lorem Ipsum
+      </h1>
+      <p class="visual-text">
+        simply dummy text of the printing
+      </p>
+    </div>
+  </section>
+  <!-- top-visual -->
   <footer>
 
   </footer>
