--- a/index.html
+++ b/index.html
@@ -91,6 +91,33 @@
       </div>
     </div>
   </section>
+  <!-- Profile -->
+  <section class="profile">
+    <div class="container">
+      <h2 class="heading">Profile</h2>
+      <p class="heading-text">
+        It is a long established fact that a reader will be distracted by the readable<br>
+        content of a page when looking at its layout.<br>
+        The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters<br>
+      </p>
+      <div class="profile-group">
+        <div class="left-profile">
+          <div class="profile-photo"></div>
+        </div>
+        <div class="right-profile">
+          <h3 class="profile-title">MyName</h3>
+          <p class="profile-text">
+            Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots<br>
+            in a piece of classical Latin literature from 45 BC, making it over 2000 years<br>
+            old. Richard McClintock, a Latin professor at Hampden-Sydney College in<br class="sp-none">
+            Virginia, looked up one of the more obscure Latin words, consectetur
+          </p>
+          <h3 class="profile-title">MySkills</h3>
+          <p class="profile-text">HTML/CSS,JavaScript,JQuery,PhotoShop</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <footer>
 
