--- a/index.html
+++ b/index.html
@@ -148,8 +148,9 @@
       </div>
     </div>
   </section>
+  <!-- Footer -->
   <footer>
-
+    <p class="copyright">©︎ 2017 WebCamp</p>
   </footer>
 </body>
 </html>
