[Add]responsive web design

--- a/index.html
+++ b/index.html
@@ -17,13 +17,6 @@
       <a href="index.html">
         <img src="img/logo.png" class="logo">
       </a>
-      <div class="menu-icon">
-        <a href="#" class="menu-trigger">
-          <span class="list-bar"></span>
-          <span class="list-bar"></span>
-          <span class="list-bar"></span>
-        </a>
-      </div>
       <nav>
         <ul class="menu">
           <li class="menu-list"><a href="#portfolio">Portfolio</a></li>
@@ -31,11 +24,16 @@
           <li class="menu-list"><a href="#profile">Profile</a></li>
           <li class="menu-list"><a href="#contact">Contact</a></li>
         </ul>
-      </nav>      
+      </nav>
+      <div class="menu-icon">
+        <span class="list-bar"></span>
+        <span class="list-bar"></span>
+        <span class="list-bar"></span>
+      </div>      
     </div>
   </header>
   <!-- Main-visual -->
-  <section class="main-visual">
+  <section id="main-visual">
     <div class="container"> 
       <h1 class="main-title">
         Lorem Ipsum
@@ -98,8 +96,8 @@
       <h2 class="heading">Profile</h2>
       <p class="heading-text">
         It is a long established fact that a reader will be distracted by the readable<br>
-        content of a page when looking at its layout.<br>
-        The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters<br>
+        content of a page when looking at its layout.<br class="sp-none">
+        The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
       </p>
       <div class="profile-group">
         <div class="left-content">
@@ -152,5 +150,7 @@
   <footer>
     <p class="copyright">©︎ 2017 WebCamp</p>
   </footer>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
